docs(api): Add documentation for single service endpoint
